--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ tracing-test = "0.2"
 axum = "0.8"
 tower = "0.5"
 tracing-subscriber = "0.3"
+sqlparser = "0.58"
 
 [[example]]
 name = "typed_usage"
