--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,10 +35,11 @@ jobs:
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.7
 
+      - name: Install cargo-binstall
+        uses: cargo-bins/cargo-binstall@main
+
       - name: Install sqlx-cli
-        env:
-          RUSTC_WRAPPER: "sccache"
-        run: cargo install sqlx-cli --no-default-features --features rustls,postgres
+        run: cargo binstall sqlx-cli --no-confirm
 
       - name: Run database migrations
         env:
