--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ thiserror = "2.0"
 chrono = { version = "0.4", features = ["serde"] }
 bytes = "1.5"
 base64 = "0.22"
+http = "1.3.1"
 
 [dev-dependencies]
 tokio-test = "0.4"
