--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ categories = ["web-programming", "database"]
 authors = ["fergus.finn@doubleword.ai"]
 
 [dependencies]
-outlet = { path = "../outlet" }
+outlet = "0.4.0"
 tokio = { version = "1.0", features = ["full"] }
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono", "migrate"] }
 serde = { version = "1.0", features = ["derive"] }
