--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ chrono = { version = "0.4", features = ["serde"] }
 bytes = "1.5"
 base64 = "0.22"
 http = "1.3.1"
+metrics = "0.24"
 
 [dev-dependencies]
 tokio-test = "0.4"
