--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ categories = ["web-programming", "database"]
 authors = ["fergus.finn@doubleword.ai"]
 
 [dependencies]
-outlet = "0.4.4"
-sqlx-pool-router = { version = "0.2.0" }
+outlet = { path = "../outlet" }
+sqlx-pool-router = { path = "../sqlx-pool-router" }
 tokio = { version = "1.0", features = ["full"] }
 sqlx = { version = "0.8", features = [
   "runtime-tokio-rustls",
